--- a/Altf4/frontend/frontend/src/index.css
+++ b/Altf4/frontend/frontend/src/index.css
@@ -59,3 +59,26 @@ li {
   margin: 0;
 }
 
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #3f3f3d transparent;
+}
+
+html::-webkit-scrollbar {
+  width: 3px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #3f3f3d;
+  border-radius: 999px;
+}
+
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+html::-webkit-scrollbar-button {
+  display: none;
+}
+
+
